fixed all the bugs, got the alerts working, with session variables, adn rediraction to addPost.php file upon successfu login, need to work on auto closure of alerts, as well as not showing login success alert again after user has closed said alert

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -394,18 +394,21 @@ input {
 }
 
 /* alert stuff... */
+#login-success {
+    display: flex;
+}
+
 .alert {
     display: none;
+    align-items: center;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
     margin: 20px;
     background-color: var(--primary-light);
     padding: 20px;
     border-radius: 10px;
     border-left: 5px solid var(--accent-400);
-    text-align: center;
-    gap: 7px;
+    gap: 20px;
 }
 
 .closebtn {
