--- a/assets/css/widescreen.css
+++ b/assets/css/widescreen.css
@@ -388,24 +388,23 @@ input {
 }
 
 /* alert stuff... */
+#login-success {
+    display: flex;
+}
+
 .alert {
     display: none;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
     margin: 20px;
+    align-items: center;
     background-color: var(--primary-light);
     padding: 20px;
     border-radius: 10px;
     border-left: 5px solid var(--accent-400);
-    text-align: center;
     gap: 20px;
 }
 
 .closebtn {
-    font-size: 35px;
-}
-
-#hello-message {
-    display: none;
+    font-size: 50px;
 }
